# lagrange-ng-plotter

./: CMakeLists.txt  README.md
libs/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
